@@ -17,6 +17,8 @@ Changes since the uhexen2-1.5.1 release:
 * SDL / Unix: Revised SDL unicode and dead keys support.
 * Mac OS X: Fixed compilation failure due to a typo in MIDI
   code introduced in v1.5.1.
+* Linux / SVGAlib mouse: Fixed missing camera mode and ideal
+  roll handling.
 * DOS: Added WatTCP (WATT-32) networking support for hexen2
   internet play.
 * DOS: Added experimental DOS support for hexenworld using
